2001-12-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Force created NPC's to start with neutral
	alignment.
	* usecode/ucinternal.cc (Usecode_function): Handle '*' in
	conversations to fix blank lines in 'Cosmo'.
	* effects.cc (Text_effect): Replace '@' with '"' instead of
	removing it.

2001-12-05  Patrick Burke  <takhisisii@yahoo.com.au>
        * usecode/ucxt : Removed a bug, added support for 'callis' and 'calli'

2001-12-04  Ryan Nunn <triforce@merlin.net.au>
	* files/crc.cc : Now actually works because it now actually reads files
	  as binary. Also did std namespace, and some casting.
	* msvcstuff/Exult.dsp, msvcstuff/expack.dsp, msvcstuff/msvc_kludges.h :
	  Added crc.cc/h where required

2001-12-03  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/barge.cc (Barge_object): Start motion with 1 tile for
	better control.
	* usecode/ucinternal.cc (public): Get_barge() checks to see that
	obj. is within the barge's footprint.  Also finds highest
	qualifying barge beneath obj.

2001-12-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: don't allow Npc_actor::remove_this to delete the NPC
	* contain.cc, objs.cc: catch possible (but unlikely) divisions by zero
	* files/crc.*, Makefile.*: CRC-32 algo
	* tools/expack.cc: compute CRC of resulting .flx file
	* exult.cc: check CRC of exult*.flx files
	* Spellbook_gump.cc: fixed reagents of BG 1st circle
	* ucinternal.cc: fixed Dagger Isle cyclops conversation
	* gamewin.cc: fixed crash when find_objects finds too many objects
	* debian/*: new debian files from Michael Z.
	* bggame.cc, sigame.cc: check for exult_bg/si.flx in is_installed()
	* schedule.cc: fix dancing Naga (missing frames)
	* barge.cc, animate.cc, actors.cc, contain.cc: call inherited functions
	of direct parent, not Game_object
	
2001-12-03  Ryan Nunn <triforce@merlin.net.au>
	* objs/animate.cc : Fixed Minoc millsaw animation. Requires new game to
	  work 100% properly.
