@@ -41,3 +41,4 @@ missing
 mkinstalldirs
 install-sh
 ltmain.sh
+exult*.tar.gz
