@@ -7,6 +7,7 @@
 %define name	 @PACKAGE@
 %define bindir	 @bindir@
 %define datadir	 @datadir@
+%define gimpdir  @GIMP_PLUGIN_PREFIX@
 
 Summary: Ultima VII Engine
 Name: %name
@@ -34,7 +35,26 @@ Group: Amusements/Games
 Exult Tools: a set of utilities for playing with Exult/Ultima VII data files.
 Included in the tools are: expack
 
+%package gimp-plugin
+Summary: A GIMP plugin for loading/saving SHP files
+Group: Applications/Graphics
+
+%description gimp-plugin
+Exult GIMP Plugin: a file plugin for the GIMP which allows loading and saving 
+of Ultima VII SHP files. 
+
+%package studio
+Summary: A GTK+-based environment for editing Exult worlds
+Group: Amusements/Games
+
+%description studio
+ExultStudio: a GTK+-based environment for editing Exult worlds
+
 %changelog
+
+* Wed Dec 05 2001  Tristan Tarrant <nadir@users.sourceforge.net>
+
+- subpackages are here !!!
 
 * Thu Nov 29 2001  Tristan Tarrant <nadir@users.sourceforge.net>
 
@@ -72,7 +92,7 @@ Included in the tools are: expack
 if [ ! -f configure ]; then
   ./autogen.sh
 fi
-CFLAGS="$RPM_OPT_FLAGS" CXXFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --bindir=%bindir --datadir=%datadir --sysconfdir=$RPM_BUILD_ROOT/etc --disable-gimp-plugin --disable-exult-studio-support --enable-tools
+CFLAGS="$RPM_OPT_FLAGS" CXXFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --bindir=%bindir --datadir=%datadir --sysconfdir=$RPM_BUILD_ROOT/etc --enable-gimp-plugin --enable-exult-studio-support --enable-tools --enable-exult-studio
 
 if [ "$SMP" != "" ]; then
   (make "MAKE=make -k -j $SMP"; exit 0)
@@ -83,7 +103,7 @@ fi
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make prefix=$RPM_BUILD_ROOT%{prefix} bindir=$RPM_BUILD_ROOT%{bindir} datadir=$RPM_BUILD_ROOT%{datadir} install
+make prefix=$RPM_BUILD_ROOT%{prefix} bindir=$RPM_BUILD_ROOT%{bindir} datadir=$RPM_BUILD_ROOT%{datadir} GIMP_PLUGIN_PREFIX=$RPM_BUILD_ROOT%{gimpdir} install
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -101,3 +121,12 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-, root, root)
 %doc tools/expack.txt
 %{bindir}/expack
+
+%files gimp-plugin
+%defattr(-, root, root)
+%{gimpdir}/u7shp
+
+%files studio
+%defattr(-, root, root)
+%{bindir}/exult_studio
+%{datadir}/exult/exult_studio.glade
